<resources>
    <string name="app_name">BikeMobi</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_rota">Map</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="kauan_macedo">Nome</string>
    <string name="textViewNome">Nome</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="localidade">Localidade</string>
    <string name="nome">Nome</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="nome_do_usuario">Nome do Usuário</string>
    <string name="biografia">Biografia</string>
    <string name="e_mail">E-mail</string>

    <string name="nome_perfil_default">Sem Nome</string>
    <string name="nome_perfil_key">NOME_PERFIL</string>
    <string name="email_perfil_default">Sem E-mail</string>
    <string name="email_perfil_key">EMAIL_PERFIL</string>
    <string name="title_activity_nav">Map</string>
    <string name="senha">Senha</string>
    <string name="avatar">Selecione um avatar</string>
    <string name="cadastro">Cadastro</string>
    <string name="entrar">Entrar</string>
    <string name="email_ou_usuario">Email/Usuário</string>

</resources>
