<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/avatar"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/avatar_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="21dp"
                    android:layout_marginStart="21dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/man_1" />

                <ImageView
                    android:id="@+id/avatar_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/man_2" />

                <ImageView
                    android:id="@+id/avatar_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/man_3" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/avatar_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="21dp"
                    android:layout_marginStart="21dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/woman_1" />

                <ImageView
                    android:id="@+id/avatar_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/woman_3" />

                <ImageView
                    android:id="@+id/avatar_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="avatarOnClick"
                    app:srcCompat="@drawable/woman_2" />

            </RelativeLayout>

            <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/logo_bike_mobi_v2" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_dark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_de_nascimento" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <Spinner
                    android:id="@+id/spEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/estado"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/spCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cidade"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editBiografia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/biografia"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editNomeUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_usuario"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>