<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" />

            <EditText
                android:id="@+id/editDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/data_de_nascimento"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cidade"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/estado"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/textBiografia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Biografia" />

            <EditText
                android:id="@+id/editBiografia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textNomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Nome de Usuário" />

            <EditText
                android:id="@+id/editNomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Email" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Senha" />

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Avatar" />

            <EditText
                android:id="@+id/editAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textDataCriacao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Data de Criação" />

            <EditText
                android:id="@+id/editDataCriacao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>